<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_alert_dlg"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:paddingTop="10dp">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/delete_h"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:text="@string/are_you_sure"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
             />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/underline"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <Button
            android:id="@+id/btn_cancel_pdf"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok_pdf"
            app:layout_constraintTop_toTopOf="@+id/btn_ok_pdf" />

        <Button
            android:id="@+id/btn_ok_pdf"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginVertical="20dp"
            android:text="@string/ok"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>