<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_folder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:id="@+id/cl_show_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_upload_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/fetching_data"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_circular" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:id="@+id/expandable_fab_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nambimobile.widgets.efab.Overlay
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:overlay_color="@color/transparent"
            app:overlay_alpha="0.5"
            app:overlay_openingAnimationDurationMs="200"/>

        <com.nambimobile.widgets.efab.ExpandableFab
            android:id="@+id/expandable_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            app:efab_color="@color/fab_color"
            app:efab_iconAnimationRotationDeg="-225"
            app:efab_closingAnticipateTension="0"
            />

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_color="@color/white"
            app:fab_icon="@drawable/ic_upload_image"
            app:label_text="@string/upload_image"
            android:id="@+id/btn_upl_img"
            app:label_backgroundColor="@color/transparent"
            app:label_textColor="@color/black"/>
        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_color="@color/white"
            app:fab_icon="@drawable/ic_upload_file"
            app:label_text="@string/upload_file"
            android:id="@+id/btn_upl_file"
            app:label_textColor="@color/black"
            app:label_backgroundColor="@color/transparent"
            />

    </com.nambimobile.widgets.efab.ExpandableFabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>