<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".ui.DetailPreviewActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#FAFAFA"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/title_toolbar"
            android:layout_width="0dp"
            android:lines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            android:text="@string/name"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:textSize="17.2sp" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cl_profile"
        android:layout_height="150dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/iv_preview_img"
            android:scaleType="fitXY"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        android:background="@drawable/oval_shape"
        android:id="@+id/iv_profile_img"
        app:layout_constraintTop_toBottomOf="@+id/cl_profile"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/created_by"
        android:layout_marginTop="10dp"
        android:textSize="11sp"
        android:id="@+id/created"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_img"
        app:layout_constraintTop_toTopOf="@+id/iv_profile_img"
        android:layout_width="wrap_content"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/created_by"
        android:id="@+id/tv_createdby_name"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/created"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_img"
        android:layout_width="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15dp"
        android:background="#e5e5e5"
        android:id="@+id/view"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_createdby_name"
        android:layout_height="1dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bckgrnd"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:background="@drawable/oval_shape"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_hash_no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:layout_constraintTop_toTopOf="@+id/bckgrnd"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:src="@drawable/next"
        android:id="@+id/arrow_created"
        app:layout_constraintBottom_toBottomOf="@+id/bckgrnd"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_img"
        app:layout_constraintTop_toTopOf="@+id/bckgrnd"
        android:layout_width="wrap_content"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/created_by"
        android:id="@+id/tv_name"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintEnd_toStartOf="@+id/arrow_created"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_img"
        android:layout_width="0dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15dp"
        android:background="#e5e5e5"
        android:id="@+id/view2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:layout_height="1dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bckgrnd_desc"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:background="@drawable/oval_shape"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:layout_constraintTop_toTopOf="@+id/bckgrnd_desc"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:src="@drawable/next"
        android:id="@+id/arrow_desc"
        app:layout_constraintBottom_toBottomOf="@+id/bckgrnd_desc"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/description"
        android:layout_marginTop="10dp"
        android:textSize="11sp"
        android:id="@+id/descr"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_img"
        app:layout_constraintTop_toTopOf="@+id/bckgrnd_desc"
        android:layout_width="wrap_content"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/created_by"
        android:id="@+id/tv_desc"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="13sp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/descr"
        app:layout_constraintEnd_toStartOf="@+id/arrow_desc"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_img"
        android:layout_width="0dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15dp"
        android:background="#e5e5e5"
        android:id="@+id/view3"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        android:layout_height="1dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bckgrnd_tags"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:background="@drawable/oval_shape"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_hash_no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
      <TextView
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tags"
        android:layout_marginTop="10dp"
          android:textSize="11sp"
          android:id="@+id/tags"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_img"
        app:layout_constraintTop_toTopOf="@+id/bckgrnd_tags"
        android:layout_width="wrap_content"/>
    <TextView
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/my_tags"
        android:id="@+id/tv_tags"
        android:textSize="9sp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/text_background"
        app:layout_constraintTop_toBottomOf="@+id/tags"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_img"
        android:layout_width="60dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>